--- a/index.html
+++ b/index.html
@@ -29,5 +29,30 @@
 
       </header>
     <!-- Header End -->
+    <main>
+        <!-- About Section Start -->
+        <section id="about">
+            <div class="container">
+                <div class="title">
+                    <h2>The Food Lover history</h2>
+                    <p>More than 25+ years of experience</p>
+                </div>
+                <div class="about-content">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, quibusdam saepe natus
+                            numquam dolorum aliquam ducimus molestias tenetur? Quaerat, atque blanditiis. Debitis
+                            voluptatem
+                            sequi quibusdam nihil eveniet obcaecati soluta rem.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat nesciunt aspernatur earum
+                            sequi
+                            consequatur, quasi iste quod nam esse adipisci neque commodi voluptate deserunt architecto
+                            rerum. Blanditiis labore sed sapiente.</p>
+                        <a href="#" class="btn btn-secondary">LEARN MORE</a>
+                    </div>
+                    <img src="./imgs/about_img.png" alt="Pizza">
+                </div>
+            </div>
+        </section>
+        <!-- About Section End -->
 </body>
 </html>
