added Offers Section

--- a/index.html
+++ b/index.html
@@ -54,5 +54,41 @@
             </div>
         </section>
         <!-- About Section End -->
+        <!-- Offers Section Start -->
+        <section id="offers">
+            <div class="container">
+                <div class="title">
+                    <h2>Our Special Offers</h2>
+                    <p>More than 25+ years of experience</p>
+                </div>
+                <div class="offers-items">
+                    <div>
+                        <img src="./imgs/offer1.png" alt="Quattro Pasta">
+                        <div>
+                            <h3>Quattro Pasta</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quibusdam.</p>
+                            <p><del>$ 55.00</del> <span class="primary-text">$18.00</span></p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./imgs/offer2.png" alt="Vegertarian Pasta">
+                        <div>
+                            <h3>Vegertarian Pasta</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quibusdam.</p>
+                            <p><del>$ 55.00</del> <span class="primary-text">$18.00</span></p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./imgs/offer3.png" alt="Quattro Pasta">
+                        <div>
+                            <h3>Gluten-Free Pasta</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quibusdam.</p>
+                            <p><del>$ 55.00</del> <span class="primary-text">$18.00</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Offers Section End -->
 </body>
 </html>
