--- a/index.html
+++ b/index.html
@@ -191,5 +191,33 @@
             </div>
         </section>
         <!-- Menu Section End -->
+         <!-- Daytime section start-->
+         <section id="daytime">
+            <div class="container">
+                <div class="daytime-items">
+                    <div class="daytime-item">
+                        <img src="./imgs/breckfastIcon.png" alt="Breakfast">
+                        <h3>Breakfast</h3>
+                        <p>8:00 am to 10:00 am</p>
+                    </div>
+                    <div class="daytime-item">
+                        <img src="./imgs/lunchIcon.png" alt="Lunch">
+                        <h3>Lunch</h3>
+                        <p>4:00 pm to 7:00 pm</p>
+                    </div>
+                    <div class="daytime-item">
+                        <img src="./imgs/dinnerIcon.png" alt="Dinner">
+                        <h3>Dinner</h3>
+                        <p>9:00 pm to 1:00 Am</p>
+                    </div>
+                    <div class="daytime-item">
+                        <img src="./imgs/dessertIcon.png" alt="dessert">
+                        <h3>Dessert</h3>
+                        <p>All day</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Daytime section end-->
 </body>
 </html>
