--- a/index.html
+++ b/index.html
@@ -219,5 +219,20 @@
             </div>
         </section>
         <!-- Daytime section end-->
+         <!-- Gallery Section Start -->
+         <section id="gallery">
+            <div class="container">
+                <h2>Our Food Gallery</h2>
+                <div class="img-gallery">
+                    <img src="./imgs/gallery1.jpeg" alt="gallery1">
+                    <img src="./imgs/gallery2.jpeg" alt="gallery2">
+                    <img src="./imgs/gallery3.jpeg" alt="gallery3">
+                    <img src="./imgs/gallery4.jpeg" alt="gallery4">
+                    <img src="./imgs/gallery5.jpeg" alt="gallery5">
+                    <img src="./imgs/gallery6.jpeg" alt="gallery6">
+                </div>
+            </div>
+        </section>
+        <!-- Gallary Section End -->
 </body>
 </html>
